Fixing spacing issues

--- a/styles.css
+++ b/styles.css
@@ -422,17 +422,19 @@ section {
   height: auto;
   min-width: 300px; 
   position: static;
-  margin-left: 10%;
-  margin-bottom: 1em;
-  margin-top: 1em;
-  padding: 0 auto;
+  margin: 1em auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .suit-gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 16px;
   width: 100%;
